@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.6.23
-Date: 2016-02-10
+Version: 0.6.24
+Date: 2016-02-20
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
                     email = "thosjleeper@gmail.com"),
